docs-website/versioned_docs/version-3.1/tools/mcptoolset.mdx
---
title: "MCPToolset"
id: mcptoolset
slug: "/mcptoolset"
description: "`MCPToolset` connects to an MCP-compliant server and automatically loads all available tools into a single manageable unit. These tools can be used directly with components like Chat Generator or `Agent`."
---

# MCPToolset

`MCPToolset` connects to an MCP-compliant server and automatically loads all available tools into a single manageable unit. These tools can be used directly with components like Chat Generator or `Agent`.

<div className="key-value-table">

|  |  |
| --- | --- |
| **Mandatory init variables** | `server_info`: Information about the MCP server to connect to                         |
| **API reference**            | [mcp](/reference/integrations-mcp)                                                           |
| **GitHub link**              | https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/mcp |
| **Package name**             | `mcp-haystack` |

</div>

## Overview

MCPToolset is a subclass of `Toolset` that dynamically discovers and loads tools from any MCP-compliant server.

It supports:

- **Streamable HTTP** for connecting to HTTP servers
- **SSE (Server-Sent Events)** _(deprecated)_ for remote MCP servers through HTTP
- **StdIO** for local tool execution through subprocess

The MCPToolset makes it easy to plug external tools into pipelines or agents, with built-in support for filtering (with `tool_names`).

### Parameters

To initialize the MCPToolset, use the following parameters:

- `server_info` (required): Connection information for the MCP server
- `tool_names` (optional): A list of tool names to add to the Toolset

:::info
Note that if `tool_names` is not specified, all tools from the MCP server will be loaded. Be cautious if there are many tools (20–30+), as this can overwhelm the LLM’s tool resolution logic.
:::

### Installation

```shell
pip install mcp-haystack
```

## Usage

### With StdIO Transport

```python
from haystack_integrations.tools.mcp import MCPToolset, StdioServerInfo

server_info = StdioServerInfo(
    command="uvx",
    args=["mcp-server-time", "--local-timezone=Europe/Berlin"],
)
toolset = MCPToolset(
    server_info=server_info,
    tool_names=["get_current_time"],
)  # If tool_names is omitted, all tools on this MCP server will be loaded (can overwhelm LLM if too many)
```

### With Streamable HTTP Transport

```python
from haystack_integrations.tools.mcp import MCPToolset, StreamableHttpServerInfo

server_info = StreamableHttpServerInfo(url="http://localhost:8000/mcp")
toolset = MCPToolset(server_info=server_info, tool_names=["get_current_time"])
```

#### Search and Fetch with a Remote Server

[Parallel Search MCP](https://docs.parallel.ai/integrations/mcp/search-mcp) provides `web_search` and `web_fetch` over Streamable HTTP. Its free endpoint requires no Parallel account or API key and is rate limited.

After installing `mcp-haystack`, you can run this example without starting a local MCP server or configuring a chat generator:

```python
from uuid import uuid4

from haystack_integrations.tools.mcp import MCPToolset, StreamableHttpServerInfo

toolset = MCPToolset(
    server_info=StreamableHttpServerInfo(url="https://search.parallel.ai/mcp"),
    tool_names=["web_search", "web_fetch"],
)
session_id = str(uuid4())  # Reuse for related calls in this task.

try:
    toolset.warm_up()
    tools = {tool.name: tool for tool in toolset.tools}

    search_result = tools["web_search"].invoke(
        objective="Find the official Haystack MCPToolset documentation",
        search_queries=["Haystack MCPToolset documentation"],
        session_id=session_id,
    )
    print(search_result)

    fetch_result = tools["web_fetch"].invoke(
        urls=["https://docs.haystack.deepset.ai/docs/mcptoolset"],
        objective="Explain how to connect to a remote MCP server",
        session_id=session_id,
    )
    print(fetch_result)
finally:
    toolset.close()
```

Each tool call sends its queries, requested URLs, and supplied context to Parallel. If you pass this toolset to an `Agent`, the agent can invoke those tools during a run. To stop making them available to the agent, remove the toolset from its `tools` configuration.

### With SSE Transport (deprecated)

```python
from haystack_integrations.tools.mcp import MCPToolset, SSEServerInfo

server_info = SSEServerInfo(url="http://localhost:8000/sse")
toolset = MCPToolset(server_info=server_info, tool_names=["get_current_time"])
```

### In a Pipeline

```python
from haystack import Pipeline
from haystack.components.agents import Agent
from haystack.components.generators.chat import OpenAIChatGenerator
from haystack.dataclasses import ChatMessage
from haystack_integrations.tools.mcp import MCPToolset, StdioServerInfo

server_info = StdioServerInfo(
    command="uvx",
    args=["mcp-server-time", "--local-timezone=Europe/Berlin"],
)
toolset = MCPToolset(server_info=server_info)

pipeline = Pipeline()
pipeline.add_component(
    "agent",
    Agent(
        chat_generator=OpenAIChatGenerator(model="gpt-4o-mini"),
        tools=toolset,
    ),
)

user_input = ChatMessage.from_user(text="What is the time in New York?")
result = pipeline.run({"agent": {"messages": [user_input]}})

print(result["agent"]["last_message"].text)
```

### With the Agent

```python
from haystack.components.generators.chat import OpenAIChatGenerator
from haystack.components.agents import Agent
from haystack.dataclasses import ChatMessage
from haystack_integrations.tools.mcp import MCPToolset, StdioServerInfo

toolset = MCPToolset(
    server_info=StdioServerInfo(
        command="uvx",
        args=["mcp-server-time", "--local-timezone=Europe/Berlin"],
    ),
    tool_names=[
        "get_current_time",
    ],  # Omit to load all tools, but may overwhelm LLM if many
)

agent = Agent(
    chat_generator=OpenAIChatGenerator(),
    tools=toolset,
    exit_conditions=["text"],
)

response = agent.run(messages=[ChatMessage.from_user("What is the time in New York?")])
print(response["messages"][-1].text)
```
